force-app/main/default/objects/Invoice__c/fields/Base_Freight__c.field-meta.xml
<CustomField>
    <fullName>Base_Freight__c</fullName>
    <description>Base freight charge from rate card (from Load.shipper_rate)</description>
    <label>Base Freight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>