force-app/main/default/objects/Invoice__c/fields/Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge__c</fullName>
    <description>Fuel surcharge amount (DAI-indexed, locked at booking)</description>
    <label>Fuel Surcharge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>