force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Unique invoice identifier generated automatically. Format: INV-YYYY-MM-NNNNN</description>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>