force-app/main/default/objects/Invoice__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Load that generated this invoice</description>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>