force-app/main/default/objects/Invoice__c/fields/Shipper_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the shipper Account record</description>
    <inlineHelpText>Shipper that will be billed for this load</inlineHelpText>
    <label>Shipper Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>