force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Invoice lifecycle status</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Pending_Approval</fullName><default>false</default><label>Pending Approval</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Partial_Paid</fullName><default>false</default><label>Partial Paid</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Disputed</fullName><default>false</default><label>Disputed</label></value>
            <value><fullName>Written_Off</fullName><default>false</default><label>Written Off</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <type>Picklist</type>
</CustomField>