force-app/main/default/objects/Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>Subtotal before tax (sum of line items)</description>
    <label>Subtotal</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>