force-app/main/default/objects/Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total invoice amount (subtotal + tax)</description>
    <inlineHelpText>Validated to equal sum of line items ±$0.01</inlineHelpText>
    <label>Total Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>